boreal/tests/assets/invalid_files/parsing/regex_class_range_invalid.yar
// [error: invalid regex class range, start must be <= to end]
rule a {
    strings:
        $a = /[z-a]/
    condition:
        $a
}
